--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "scripts": {
     "start": "yarn test -- --watchAll",
     "test": "cross-env NODE_ENV=development jest --coverage",
+    "coverage": "cat ./coverage/lcov.info | coveralls",
     "prebuild": "rimraf lib",
     "build": "babel src -d lib",
     "preversion": "yarn test && yarn build"
@@ -46,6 +47,7 @@
     "babel-polyfill": "^6.13.0",
     "babel-preset-stage-0": "^6.5.0",
     "babel-register": "^6.11.6",
+    "coveralls": "^3.0.0",
     "cross-env": "^4.0.0",
     "delay": "^2.0.0",
     "eslint": "^3.19.0",
