--- a/package.json
+++ b/package.json
@@ -32,9 +32,10 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "delay": "^3.0.0",
-    "pify": "^3.0.0",
-    "ws": "^6.0.0"
+    "pify": "^3.0.0"
+  },
+  "peerDependencies": {
+    "ws": ">=0.0.0"
   },
   "devDependencies": {
     "babel-cli": "^6.11.4",
@@ -49,11 +50,13 @@
     "babel-register": "^6.11.6",
     "coveralls": "^3.0.0",
     "cross-env": "^4.0.0",
+    "delay": "^3.0.0",
     "eslint": "^4.18.2",
     "eslint-config-cantonjs": "^0.2.0",
     "jest": "^23.5.0",
     "prettier-eslint-cli": "^4.7.1",
-    "rimraf": "^2.5.4"
+    "rimraf": "^2.5.4",
+    "ws": "^6.0.0"
   },
   "jest": {
     "collectCoverageFrom": [
