--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,14 @@
+sudo: required
+
 language: node_js
 
+services:
+  - docker
+
 node_js:
-  - "4"
-  - "5"
-  - "6"
-  - "7"
-  - "8"
-  - "9"
+  - 6
+  - 8
+  - 10
 
 notifications:
   email: false
