--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "promise-ws",
   "description": "A Promise-Based WebSocket implementation for Node.js",
-  "version": "0.4.1",
+  "version": "1.0.0-0",
   "main": "lib/index",
   "files": [
     "*.md",
