--- a/package.json
+++ b/package.json
@@ -28,10 +28,8 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "pify": "^3.0.0"
-  },
-  "peerDependencies": {
-    "ws": ">=0.0.0"
+    "pify": "^3.0.0",
+    "ws": "^6.0.0"
   },
   "devDependencies": {
     "babel-cli": "^6.11.4",
@@ -51,8 +49,7 @@
     "eslint-config-cantonjs": "^0.2.0",
     "jest": "^23.5.0",
     "prettier-eslint-cli": "^4.7.1",
-    "rimraf": "^2.5.4",
-    "ws": "^6.0.0"
+    "rimraf": "^2.5.4"
   },
   "jest": {
     "collectCoverageFrom": [
